--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 		<div class="container products-wrapper">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="products-title">Novedades</h2>
+					<h2 class="products-title">Todos los productos</h2>
 				</div>
 				<!-- Show the "ultimos" products -->
 
@@ -60,7 +60,10 @@
 										<%= datos[i].nombreProducto %>
 									</h2>
 									<p>
-										<%= datos[i].descripcion %>
+										<%= datos[i].usuario.usuario %>
+									</p>
+									<p>
+										<%= datos[i].usuario.mail %>
 									</p>
 								</article>
 							</a>
@@ -70,38 +73,7 @@
 			</div>
 		</div>
 		<!-- /Novedades -->
-		<!-- Más comentados -->
-		<div class="container products-wrapper">
-			<div class="row">
-				<div class="col-12">
-					<h2 class="products-title">Más comentados</h2>
-				</div>
-				<!-- Show the "ultimos" products -->
-
-
-				<% for(let i=6; i < 10; i++){ %>
-					<div class="col-12 col-sm-6 col-lg-3">
-						<section class="product-box">
-							<a href="product/<%=  datos[i].id %>">
-								<figure class="product-box_image">
-									<img src="<%= datos[i].imagenProducto %>" alt="foto" class="imgProduct">
-								</figure>
-								<article class="product-box_data">
-									<h2>
-										<%= datos[i].nombreProducto %>
-									</h2>
-									<p>
-										<%= datos[i].descripcion %>
-									</p>
-								</article>
-							</a>
-						</section>
-					</div>
-					<% } %>
-
-			</div>
-		</div>
-		<!-- /Más comentados -->
+		
 
 
 		<!-- footer -->
